--- a/404.css
+++ b/404.css
@@ -1,4 +1,4 @@
 body {
-  background: rgb(255, 187, 0);
+  background: #ffa500;
   font-family:"Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
 }
