--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul {
 	padding: 0;
   border-radius:10px;
 	overflow: hidden;
-	background-color: #ffa500;
+	background-color: #00c3ff;
 }
 li {
 	float: left;
